Fix off-screen text in popups
Previously the text would not be wrapped at all, causing text to run off
the popup box. With this commit the wrapping in the popup is changed, so
that hopefully it stays inside the popup box.

--- a/share/userfiles/templates/default.css
+++ b/share/userfiles/templates/default.css
@@ -403,7 +403,6 @@ div#popupWindow h1 {
 #popupWindowContent table.mytable td.tdfield {
     overflow: hidden;
     text-overflow: ellipsis;
-    white-space: nowrap;
 }
 #popupWindowContent input[type="radio"] {
     vertical-align: middle;
